continued to attempt to fix form alignment... still encountered problem after problem...

--- a/css/style.css
+++ b/css/style.css
@@ -74,18 +74,14 @@ textarea {
 form {
     background-color: slategray;
     padding-top: 1em;
-    margin: 0 auto;
-    text-align: center;
 }
 
 label {
     padding-left: .5em;
-
 }
 
-input[type="radio"]{
-    display: block;
-    margin: 0 auto;
+input[type="radio"] {
+    text-align: ;
 }
 
 .form input {
@@ -94,7 +90,6 @@ input[type="radio"]{
 
 .form h3 {
     margin-bottom: 1em;
-    text-align: center;
 }
 
 
@@ -107,6 +102,7 @@ input[type="radio"]{
  .submit {
      width: 5em;
      height: 2em;
+     margin: auto;
  }
 
 /* Media Querys */
